# AI-CTO

./: .gitignore  README.md  app.py  backend.py  bokeh_visualization.py  db_utils.py  interactive_console_output.xml  log.html  models.py  nohup.out  output.xml  prompt.txt  pyproject.toml  report.html  routes.py  run_tests.sh
.github/workflows/: main.yml
backend/: backend.py
documentation/: Documentation.md  architecture.md
services/: openai_service.py
static/: styles.css
templates/: index.html  previous_projects.html  quote.html  visualization.html
tests/: webdriver_manager_keywords.py
tests/robot/: pages.robot  resource.robot
